--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSS Okuyucu</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <div id="app">
-
+    <!-- Sol Menü -->
     <aside id="sidebar">
         <h2>RSS Kaynakları</h2>
         <input type="text" id="search" placeholder="Ara...">
-        <ul id="feedList"></ul>
+
+        <!-- Klasörler buraya gelecek -->
+        <div id="menu"></div>
     </aside>
 
-    <main id="content">
-        <h2>Haberi seç</h2>
-        <div id="articles"></div>
+    <!-- Orta Liste -->
+    <main id="feed-list">
+        <h2>Kaynak seç</h2>
     </main>
 
+    <!-- Sağ İçerik -->
+    <section id="content">
+        <h2>Haberi seç</h2>
+    </section>
 </div>
 
 <script src="app.js"></script>
