Update Open Graph URL in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="RSS Bağlantıları">
   <meta property="og:description" content="Türkçe içerik üreten sitelerin RSS bağlantılarını kategoriler altında listeler ve bu adresler arasında arama yapma imkanı sağlar.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://bakinazik.github.io/rss/">
+  <meta property="og:url" content="https://e-calender.github.io/rss-site/">
   <meta name="keywords" content="rss, türkçe rss, rss bağlantıları, turkish rss sources">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="16x16" href="dist/favicon-16x16.png">
@@ -24,7 +24,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "RSS Bağlantıları",
-      "url": "https://bakinazik.github.io/rss/",
+      "url": "https://e-calender.github.io/rss-site/",
       "description": "Türkçe içerik üreten sitelerin RSS bağlantılarını kategoriler altında listeler ve bu adresler arasında arama yapma imkanı sağlar.",
       "inLanguage": "tr",
       "isPartOf": {
